Update course pages
- Add courses format navigation
- Update courses page content
- Update courses style rules
- Update Take 5 style rules

--- a/courses/full/index.html
+++ b/courses/full/index.html
@@ -7,24 +7,13 @@ permalink: /courses/full/
 {%- endif -%}
 
 {%- assign courses = site.data.courses-page -%}
+{%- assign about = site.data.courses-page.about_section -%}
 
-<section class="find-courses" id="catalog">
-
-  <header class="about">
-    <div class="container">
-      <h1>{{ courses.main.title }}</h1>
-      <p>
-        <strong class="block">{{ courses.main.tagline }}</strong>
-        {{ courses.main.short_description }}
-      </p>
-      {%- include courses/about/index.html -%}
-    </div>
-  </header>
-
+<nav class="courses-format" aria-label="Courses">
   <div class="container">
-    <ul class="tabs">
+    <ul role="list">
       <li>
-        <a href="/courses/full">{{ courses.full_courses.format }}</a>
+        <a href="/courses/full" aria-current="page">{{ courses.full_courses.format }}</a>
       </li>
       <li>
         <a href="/courses/gym-shorts">{{ courses.short_courses.format }}</a>
@@ -32,22 +21,130 @@ permalink: /courses/full/
       <li>
         <a href="/courses/take5">{{ courses.tutorials.format }}</a>
       </li>
+      <li>
+        <a href="/collections">Collections</a>
+      </li>
     </ul>
+  </div>
+</nav>
+
+<section class="find-courses" id="catalog">
+
+  <header class="about">
+    <div class="container">
+      <h1>{{ courses.full_courses.format }}</h1>
+      <p>
+        <span class="block"><strong>Free online full courses.</strong> Earn a certificate in a day or less.</span>
+        {{ courses.main.short_description }}
+      </p>
+      <dl class="row">
+        <div class="col-md-5">
+          <dt>{{ about.lists[1] }}</dt>
+          {%- for benefits in about.full_courses[1] -%}
+          <dd>{{ benefits.label }}</dd>
+          {%- endfor -%}
+        </div>
+        <div class="col-md-7">
+          <dt>{{ about.lists[2] }}</dt>
+          {%- for length in about.full_courses[2] -%}
+          <dd>{{ length.label }}</dd>
+          {%- endfor -%}
+        </div>
+      </dl>
+      <p><b>Don’t have the time?</b> Explore our <a href="/courses/gym-shorts"><b>Gym Shorts</b></a> and earn a badge in a few hours.</p>
+    </div>
+  </header>
+
+  <div class="container">
+    <div class="white-panel">
+      <article class="courses-promo">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-4">
+              <h2>Most Popular This Week</h2>
+              <div class="row">
+                <div class="col-md-12">
+                  <figure>
+                    <img alt="" src="{{ site.data.courses.GYM-107.poster_art }}">
+                  </figure>
+                </div>
+                <div class="col-md-12">
+                  <article>
+                    <header>
+                      <hgroup>
+                        <p class="subhead all-caps"><b>{{ site.data.courses.GYM-107.topic }}</b></p>
+                        <h2><a href="{{ site.gymurl }}{{ site.data.courses.GYM-107.url }}">{{ site.data.courses.GYM-107.title }}</a></h2>
+                      </hgroup>
+                    </header>
+                    <p>{{ site.data.courses.GYM-107.short_description }}</p>
+                    <div class="cta">
+                      <a class="gym-button" href="{{ site.gymurl }}{{ site.data.courses.GYM-107.url }}"><b>Learn More</b></a>
+                    </div>
+                  </article>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <h2>JavaScript for Beginners</h2>
+              <div class="row">
+                <div class="col-md-12">
+                  <figure>
+                    <img alt="" src="{{ site.data.courses.GYM-104.poster_art }}">
+                  </figure>
+                </div>
+                <div class="col-md-12">
+                  <article>
+                    <header>
+                      <hgroup>
+                        <p class="subhead all-caps"><b>{{ site.data.courses.GYM-104.topic }}</b></p>
+                        <h2><a href="{{ site.gymurl }}{{ site.data.courses.GYM-104.url }}">{{ site.data.courses.GYM-104.title }}</a></h2>
+                      </hgroup>
+                    </header>
+                    <p>{{ site.data.courses.GYM-104.short_description }}</p>
+                    <div class="cta">
+                      <a class="gym-button" href="{{ site.gymurl }}{{ site.data.courses.GYM-104.url }}"><b>Learn More</b></a>
+                    </div>
+                  </article>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <h2>User Experience 101</h2>
+              <div class="row">
+                <div class="col-md-12">
+                  <figure>
+                    <img alt="" src="{{ site.data.courses.GYM-103.poster_art }}">
+                  </figure>
+                </div>
+                <div class="col-md-12">
+                  <article>
+                    <header>
+                      <hgroup>
+                        <p class="subhead all-caps"><b>{{ site.data.courses.GYM-103.topic }}</b></p>
+                        <h2><a href="{{ site.gymurl }}{{ site.data.courses.GYM-103.url }}">{{ site.data.courses.GYM-103.title }}</a></h2>
+                      </hgroup>
+                    </header>
+                    <p>{{ site.data.courses.GYM-103.short_description }}</p>
+                    <div class="cta">
+                      <a class="gym-button" href="{{ site.gymurl }}{{ site.data.courses.GYM-103.url }}"><b>Learn More</b></a>
+                    </div>
+                  </article>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </article>
+    </div>
   </div>
 
   <main id="main" class="container" aria-label="Content" tabindex="-1" role="main">
     <div class="white-panel catalog-content">
       <div class="row">
-        <div class="col-md-9 course-overview">
+        <div class="col-md-12 course-overview">
           <section class="courses-container">
 
             <section id="full">
-              <header class="intro">
-                <h1>Full Courses</h1>
-                <p class="hero">
-                  {{ courses.full_courses.short_description }}
-                </p>
-              </header>
               <ul class="listing-courses list-unstyled">
                 {%- assign base_path = "/courses/full/" | prepend: site.gymurl -%}
                 {%- include_relative course-list-recent.html -%}
@@ -59,14 +156,17 @@ permalink: /courses/full/
 
           </section>
         </div>
+        {%- comment -%}
         <div class="col-md-3 sidebar">
           {%- comment -%} Get Upcoming/Featured Courses Sidebar {%- endcomment -%}
           {%- include sidebar-featured.html -%}
         </div>
+        {%- endcomment -%}
       </div><!-- .catalog-content.row -->
     </div><!-- .white-panel -->
 
   </main>
+
 </section>
 
 {%- if jekyll.environment == "local" -%}
