--- a/courses/gym-shorts/index.html
+++ b/courses/gym-shorts/index.html
@@ -7,47 +7,144 @@ permalink: /courses/gym-shorts/
 {%- endif -%}
 
 {%- assign courses = site.data.courses-page -%}
+{%- assign about = site.data.courses-page.about_section -%}
+
+<nav class="courses-format" aria-label="Courses">
+  <div class="container">
+    <ul role="list">
+      <li>
+        <a href="/courses/full">{{ courses.full_courses.format }}</a>
+      </li>
+      <li>
+        <a href="/courses/gym-shorts" aria-current="page">{{ courses.short_courses.format }}</a>
+      </li>
+      <li>
+        <a href="/courses/take5">{{ courses.tutorials.format }}</a>
+      </li>
+      <li>
+        <a href="/collections">Collections</a>
+      </li>
+    </ul>
+  </div>
+</nav>
 
 <section class="find-courses" id="catalog">
 
   <header class="about">
     <div class="container">
-      <h1>{{ courses.main.title }}</h1>
+      <h1>{{ courses.short_courses.format }}</h1>
       <p>
-        <strong class="block">{{ courses.main.tagline }}</strong>
+        <span class="block"><strong>Free online short courses.</strong> Earn a badge in a few hours.</span>
         {{ courses.main.short_description }}
       </p>
-      {%- include courses/about/index.html -%}
+      <dl class="row">
+        <div class="col-md-5">
+          <dt>{{ about.lists[1] }}</dt>
+          {%- for benefits in about.short_courses[1] -%}
+          <dd>{{ benefits.label }}</dd>
+          {%- endfor -%}
+        </div>
+        <div class="col-md-7">
+          <dt>{{ about.lists[2] }}</dt>
+          {%- for length in about.short_courses[2] -%}
+          <dd>{{ length.label }}</dd>
+          {%- endfor -%}
+        </div>
+      </dl>
+      <p><b>Looking for career advancement?</b> Explore our <a href="/courses/full"><b>Full Courses</b></a> and earn a certificate in a day or less.</p>
     </div>
   </header>
 
   <div class="container">
-    <ul class="tabs">
-      <li>
-        <a href="/courses/full">{{ courses.full_courses.format }}</a>
-      </li>
-      <li>
-        <a href="/courses/gym-shorts">{{ courses.short_courses.format }}</a>
-      </li>
-      <li>
-        <a href="/courses/take5">{{ courses.tutorials.format }}</a>
-      </li>
-    </ul>
+    <div class="white-panel">
+      <article class="courses-promo">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-4">
+              <h2>Most Popular This Week</h2>
+              <div class="row">
+                <div class="col-md-12">
+                  <figure>
+                    <img alt="" src="{{ site.data.courses.GYM-018.poster_art }}">
+                  </figure>
+                </div>
+                <div class="col-md-12">
+                  <article>
+                    <header>
+                      <hgroup>
+                        <p class="subhead all-caps"><b>{{ site.data.courses.GYM-018.topic }}</b></p>
+                        <h2><a href="{{ site.gymurl }}{{ site.data.courses.GYM-018.url }}">{{ site.data.courses.GYM-018.title }}</a></h2>
+                      </hgroup>
+                    </header>
+                    <p>{{ site.data.courses.GYM-018.short_description }}</p>
+                    <div class="cta">
+                      <a class="gym-button" href="{{ site.gymurl }}{{ site.data.courses.GYM-018.url }}"><b>Learn More</b></a>
+                    </div>
+                  </article>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <h2>Develop Accessibility Skills</h2>
+              <div class="row">
+                <div class="col-md-12">
+                  <figure>
+                    <img alt="" src="{{ site.data.courses.GYM-016.poster_art }}">
+                  </figure>
+                </div>
+                <div class="col-md-12">
+                  <article>
+                    <header>
+                      <hgroup>
+                        <p class="subhead all-caps"><b>{{ site.data.courses.GYM-016.topic }}</b></p>
+                        <h2><a href="{{ site.gymurl }}{{ site.data.courses.GYM-016.url }}">{{ site.data.courses.GYM-016.title }}</a></h2>
+                      </hgroup>
+                    </header>
+                    <p>{{ site.data.courses.GYM-016.short_description }}</p>
+                    <div class="cta">
+                      <a class="gym-button" href="{{ site.gymurl }}{{ site.data.courses.GYM-016.url }}"><b>Learn More</b></a>
+                    </div>
+                  </article>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <h2>Benefits of Prototyping</h2>
+              <div class="row">
+                <div class="col-md-12">
+                  <figure>
+                    <img alt="" src="{{ site.data.courses.GYM-015.poster_art }}">
+                  </figure>
+                </div>
+                <div class="col-md-12">
+                  <article>
+                    <header>
+                      <hgroup>
+                        <p class="subhead all-caps"><b>{{ site.data.courses.GYM-015.topic }}</b></p>
+                        <h2><a href="{{ site.gymurl }}{{ site.data.courses.GYM-015.url }}">{{ site.data.courses.GYM-015.title }}</a></h2>
+                      </hgroup>
+                    </header>
+                    <p>{{ site.data.courses.GYM-015.short_description }}</p>
+                    <div class="cta">
+                      <a class="gym-button" href="{{ site.gymurl }}{{ site.data.courses.GYM-015.url }}"><b>Learn More</b></a>
+                    </div>
+                  </article>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </article>
+    </div>
   </div>
 
   <main id="main" class="container" aria-label="Content" tabindex="-1" role="main">
     <div class="white-panel catalog-content">
       <div class="row">
-        <div class="col-md-9 course-overview">
+        <div class="col-md-12 course-overview">
           <section class="courses-container">
 
             <section id="gymshorts">
-              <header class="intro">
-                <h1>Gym Shorts</h1>
-                <p class="hero">
-                  {{ courses.short_courses.short_description }}
-                </p>
-              </header>
               <ul class="listing-courses list-unstyled" id="gym-shorts-list">
                 {%- assign base_path = "/courses/gym-shorts/" | prepend: site.gymurl -%}
                 {%- include_relative course-list-recent.html -%}
@@ -59,14 +156,17 @@ permalink: /courses/gym-shorts/
 
           </section>
         </div>
+        {%- comment -%}
         <div class="col-md-3 sidebar">
           {%- comment -%} Get Upcoming/Featured Courses Sidebar {%- endcomment -%}
           {%- include sidebar-featured.html -%}
         </div>
+        {%- endcomment -%}
       </div><!-- .catalog-content.row -->
     </div><!-- .white-panel -->
 
   </main>
+
 </section>
 
 {%- if jekyll.environment == "local" -%}
