--- a/hub-pages/collections/collections.html
+++ b/hub-pages/collections/collections.html
@@ -3,6 +3,28 @@ layout: wrapper-full-default
 permalink: /collections/
 css: [/css/collections.css]
 ---
+{%- assign courses = site.data.courses-page -%}
+{%- assign about = site.data.courses-page.about_section -%}
+
+<nav class="courses-format" aria-label="Courses">
+  <div class="container">
+    <ul role="list">
+      <li>
+        <a href="/courses/full">{{ courses.full_courses.format }}</a>
+      </li>
+      <li>
+        <a href="/courses/gym-shorts">{{ courses.short_courses.format }}</a>
+      </li>
+      <li>
+        <a href="/courses/take5">{{ courses.tutorials.format }}</a>
+      </li>
+      <li>
+        <a href="/collections" aria-current="page">Collections</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+
 <main id="main" role="main">
   <header class="collections--about" id="about">
     <div class="container">
