Update courses landing page
- Update featured content structure

--- a/courses/index.html
+++ b/courses/index.html
@@ -60,10 +60,8 @@ permalink: /courses/
                 <div class="col-md-7">
                   <article>
                     <header>
-                      <hgroup>
-                        <p class="subhead all-caps"><b>{{ site.data.courses.GYM-107.topic }}</b></p>
-                        <h2><a href="{{ site.gymurl }}{{ site.data.courses.GYM-107.url }}">{{ site.data.courses.GYM-107.title }}</a></h2>
-                      </hgroup>
+                      <p class="subhead all-caps"><b>{{ site.data.courses.GYM-107.topic }}</b></p>
+                      <h2><a href="{{ site.gymurl }}{{ site.data.courses.GYM-107.url }}">{{ site.data.courses.GYM-107.title }}</a></h2>
                     </header>
                     <p>{{ site.data.courses.GYM-107.short_description }}</p>
                     <div class="cta">
@@ -112,10 +110,8 @@ permalink: /courses/
                 <div class="col-md-7">
                   <article>
                     <header>
-                      <hgroup>
-                        <p class="subhead all-caps"><b>{{ site.data.courses.GYM-017.topic }}</b></p>
-                        <h2><a href="{{ site.gymurl }}{{ site.data.courses.GYM-017.url }}">{{ site.data.courses.GYM-017.title }}</a></h2>
-                      </hgroup>
+                      <p class="subhead all-caps"><b>{{ site.data.courses.GYM-017.topic }}</b></p>
+                      <h2><a href="{{ site.gymurl }}{{ site.data.courses.GYM-017.url }}">{{ site.data.courses.GYM-017.title }}</a></h2>
                     </header>
                     <p>{{ site.data.courses.GYM-017.short_description }}</p>
                     <div class="cta">
@@ -164,10 +160,8 @@ permalink: /courses/
                 <div class="col-md-7">
                   <article>
                     <header>
-                      <hgroup>
-                        <p class="subhead all-caps"><b>{{ site.data.take5.GYM-5042.topic }}</b></p>
-                        <h2><a href="{{ site.gymurl }}{{ site.data.take5.GYM-5042.url }}">{{ site.data.take5.GYM-5042.title }}</a></h2>
-                      </hgroup>
+                      <p class="subhead all-caps"><b>{{ site.data.take5.GYM-5042.topic }}</b></p>
+                      <h2><a href="{{ site.gymurl }}{{ site.data.take5.GYM-5042.url }}">{{ site.data.take5.GYM-5042.title }}</a></h2>
                     </header>
                     <p>{{ site.data.take5.GYM-5042.short_description }}</p>
                     <div class="cta">
@@ -238,7 +232,7 @@ permalink: /courses/
                   <dd><a href="{{ site.gymurl }}/ux-design">UX Design</a></dd>
                   <dd><a href="{{ site.gymurl }}/prototyping">Prototyping</a></dd>
                   <dd><a href="{{ site.gymurl }}/accessibility">Accessibility</a></dd>
-                   <dd><a href="{{ site.gymurl }}/career-skills">Career Skills</a></dd>
+                  <dd><a href="{{ site.gymurl }}/remote-work">Remote Work</a></dd>
                 </div>
               </dl>
             </div>
