Update featured content
- Add alt text

--- a/courses/full/index.html
+++ b/courses/full/index.html
@@ -65,7 +65,7 @@ permalink: /courses/full/
               <div class="row">
                 <div class="col-md-12">
                   <figure>
-                    <img alt="" src="{{ site.data.courses.GYM-107.poster_art }}">
+                    <img alt="{{ site.data.courses.GYM-107.title }} cover image." src="{{ site.data.courses.GYM-107.poster_art }}">
                   </figure>
                 </div>
                 <div class="col-md-12">
@@ -89,7 +89,7 @@ permalink: /courses/full/
               <div class="row">
                 <div class="col-md-12">
                   <figure>
-                    <img alt="" src="{{ site.data.courses.GYM-104.poster_art }}">
+                    <img alt="{{ site.data.courses.GYM-104.title }} cover image." src="{{ site.data.courses.GYM-104.poster_art }}">
                   </figure>
                 </div>
                 <div class="col-md-12">
@@ -113,7 +113,7 @@ permalink: /courses/full/
               <div class="row">
                 <div class="col-md-12">
                   <figure>
-                    <img alt="" src="{{ site.data.courses.GYM-103.poster_art }}">
+                    <img alt="{ site.data.courses.GYM-103.title }} cover image." src="{{ site.data.courses.GYM-103.poster_art }}">
                   </figure>
                 </div>
                 <div class="col-md-12">
