--- a/courses/gym-shorts/index.html
+++ b/courses/gym-shorts/index.html
@@ -65,7 +65,7 @@ permalink: /courses/gym-shorts/
               <div class="row">
                 <div class="col-md-12">
                   <figure>
-                    <img alt="" src="{{ site.data.courses.GYM-018.poster_art }}">
+                    <img alt="{{ site.data.courses.GYM-018.title }} cover image." src="{{ site.data.courses.GYM-018.poster_art }}">
                   </figure>
                 </div>
                 <div class="col-md-12">
@@ -89,7 +89,7 @@ permalink: /courses/gym-shorts/
               <div class="row">
                 <div class="col-md-12">
                   <figure>
-                    <img alt="" src="{{ site.data.courses.GYM-016.poster_art }}">
+                    <img alt="{{ site.data.courses.GYM-016.title }} cover image." src="{{ site.data.courses.GYM-016.poster_art }}">
                   </figure>
                 </div>
                 <div class="col-md-12">
@@ -113,7 +113,7 @@ permalink: /courses/gym-shorts/
               <div class="row">
                 <div class="col-md-12">
                   <figure>
-                    <img alt="" src="{{ site.data.courses.GYM-015.poster_art }}">
+                    <img alt="{{ site.data.courses.GYM-015.title }} cover image." src="{{ site.data.courses.GYM-015.poster_art }}">
                   </figure>
                 </div>
                 <div class="col-md-12">
