--- a/courses/full/index.html
+++ b/courses/full/index.html
@@ -55,88 +55,7 @@ permalink: /courses/full/
     </div>
   </header>
 
-  <div class="container">
-    <div class="white-panel">
-      <article class="courses-promo">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-4">
-              <h2>Most Popular This Week</h2>
-              <div class="row">
-                <div class="col-md-12">
-                  <figure>
-                    <img alt="{{ site.data.courses.GYM-107.title }} cover image." src="{{ site.data.courses.GYM-107.poster_art }}">
-                  </figure>
-                </div>
-                <div class="col-md-12">
-                  <article>
-                    <header>
-                      <hgroup>
-                        <p class="subhead all-caps"><b>{{ site.data.courses.GYM-107.topic }}</b></p>
-                        <h2><a href="{{ site.gymurl }}{{ site.data.courses.GYM-107.url }}">{{ site.data.courses.GYM-107.title }}</a></h2>
-                      </hgroup>
-                    </header>
-                    <p>{{ site.data.courses.GYM-107.short_description }}</p>
-                    <div class="cta">
-                      <a class="gym-button" href="{{ site.gymurl }}{{ site.data.courses.GYM-107.url }}"><b>Learn More</b></a>
-                    </div>
-                  </article>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <h2>JavaScript for Beginners</h2>
-              <div class="row">
-                <div class="col-md-12">
-                  <figure>
-                    <img alt="{{ site.data.courses.GYM-104.title }} cover image." src="{{ site.data.courses.GYM-104.poster_art }}">
-                  </figure>
-                </div>
-                <div class="col-md-12">
-                  <article>
-                    <header>
-                      <hgroup>
-                        <p class="subhead all-caps"><b>{{ site.data.courses.GYM-104.topic }}</b></p>
-                        <h2><a href="{{ site.gymurl }}{{ site.data.courses.GYM-104.url }}">{{ site.data.courses.GYM-104.title }}</a></h2>
-                      </hgroup>
-                    </header>
-                    <p>{{ site.data.courses.GYM-104.short_description }}</p>
-                    <div class="cta">
-                      <a class="gym-button" href="{{ site.gymurl }}{{ site.data.courses.GYM-104.url }}"><b>Learn More</b></a>
-                    </div>
-                  </article>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <h2>User Experience 101</h2>
-              <div class="row">
-                <div class="col-md-12">
-                  <figure>
-                    <img alt="{ site.data.courses.GYM-103.title }} cover image." src="{{ site.data.courses.GYM-103.poster_art }}">
-                  </figure>
-                </div>
-                <div class="col-md-12">
-                  <article>
-                    <header>
-                      <hgroup>
-                        <p class="subhead all-caps"><b>{{ site.data.courses.GYM-103.topic }}</b></p>
-                        <h2><a href="{{ site.gymurl }}{{ site.data.courses.GYM-103.url }}">{{ site.data.courses.GYM-103.title }}</a></h2>
-                      </hgroup>
-                    </header>
-                    <p>{{ site.data.courses.GYM-103.short_description }}</p>
-                    <div class="cta">
-                      <a class="gym-button" href="{{ site.gymurl }}{{ site.data.courses.GYM-103.url }}"><b>Learn More</b></a>
-                    </div>
-                  </article>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </article>
-    </div>
-  </div>
+  {% include courses/featured/full-courses.html %}
 
   <main id="main" class="container" aria-label="Content" tabindex="-1" role="main">
     <div class="white-panel catalog-content">
