Fix broken paths

--- a/courses/index.html
+++ b/courses/index.html
@@ -54,7 +54,7 @@ permalink: /courses/
               <div class="row">
                 <div class="col-md-5">
                   <figure>
-                    <img alt="{{ site.data.courses.GYM-107.title }} cover image." src="https:thegymcms.com/{{ site.data.courses.GYM-107.poster_art }}">
+                    <img alt="{{ site.data.courses.GYM-107.title }} cover image." src="{{ site.url }}/{{ site.data.courses.GYM-107.poster_art }}">
                   </figure>
                 </div>
                 <div class="col-md-7">
@@ -104,7 +104,7 @@ permalink: /courses/
               <div class="row">
                 <div class="col-md-5">
                   <figure>
-                    <img alt="{{ site.data.courses.GYM-017.title }} cover image." src="https:thegymcms.com/{{ site.data.courses.GYM-017.poster_art }}">
+                    <img alt="{{ site.data.courses.GYM-017.title }} cover image." src="{{ site.url }}/{{ site.data.courses.GYM-017.poster_art }}">
                   </figure>
                 </div>
                 <div class="col-md-7">
@@ -154,7 +154,7 @@ permalink: /courses/
               <div class="row">
                 <div class="col-md-5">
                   <figure>
-                    <img alt="{{ site.data.take5.GYM-5042.title }} cover image." src="https://thegymcms.com/{{ site.data.take5.GYM-5042.poster_art }}">
+                    <img alt="{{ site.data.take5.GYM-5042.title }} cover image." src="{{ site.url }}/{{ site.data.take5.GYM-5042.poster_art }}">
                   </figure>
                 </div>
                 <div class="col-md-7">
@@ -204,7 +204,7 @@ permalink: /courses/
               <div class="row">
                 <div class="col-md-5">
                   <figure>
-                    <img alt="Design Systems Collection cover image." src="https:thegymcms.com/img/hub-pages/og/design-systems-collection-og.png">
+                    <img alt="Design Systems Collection cover image." src="{{ site.url }}/img/hub-pages/og/design-systems-collection-og.png">
                   </figure>
                 </div>
                 <div class="col-md-7">
