Update courses page
- Remove redundant style rule
- Update paragraph spacing
- Add natural class to buttons
- Update CTA button layout
- Update header style rules

--- a/courses/index.html
+++ b/courses/index.html
@@ -65,7 +65,8 @@ permalink: /courses/
                     </header>
                     <p>{{ site.data.courses.GYM-107.short_description }}</p>
                     <div class="cta">
-                      <a class="gym-button" href="{{ site.gymurl }}{{ site.data.courses.GYM-107.url }}">Learn More</a> <a class="gym-button" href="{{ site.gymurl }}/courses/full">View All Full Courses</a>
+                      <a class="gym-button natural" href="{{ site.gymurl }}{{ site.data.courses.GYM-107.url }}">Learn More</a>
+                      <a class="gym-button natural" href="{{ site.gymurl }}/courses/full">View All Full Courses</a>
                     </div>
                   </article>
                 </div>
@@ -115,7 +116,8 @@ permalink: /courses/
                     </header>
                     <p>{{ site.data.courses.GYM-017.short_description }}</p>
                     <div class="cta">
-                      <a class="gym-button" href="{{ site.gymurl }}{{ site.data.courses.GYM-017.url }}">Learn More</a> <a class="gym-button" href="{{ site.gymurl }}/courses/gym-shorts">View All Gym Shorts</a>
+                      <a class="gym-button natural" href="{{ site.gymurl }}{{ site.data.courses.GYM-017.url }}">Learn More</a>
+                      <a class="gym-button natural" href="{{ site.gymurl }}/courses/gym-shorts">View All Gym Shorts</a>
                     </div>
                   </article>
                 </div>
@@ -165,7 +167,8 @@ permalink: /courses/
                     </header>
                     <p>{{ site.data.take5.GYM-5042.short_description }}</p>
                     <div class="cta">
-                      <a class="gym-button" href="{{ site.gymurl }}{{ site.data.take5.GYM-5042.url }}">Learn More</a> <a class="gym-button" href="{{ site.gymurl }}/courses/take5">View All Tutorials</a>
+                      <a class="gym-button natural" href="{{ site.gymurl }}{{ site.data.take5.GYM-5042.url }}">Learn More</a>
+                      <a class="gym-button natural" href="{{ site.gymurl }}/courses/take5">View All Tutorials</a>
                     </div>
                   </article>
                 </div>
@@ -217,7 +220,8 @@ permalink: /courses/
                     </header>
                     <p>Teamwork (and creating effective pattern libraries) makes the dream work.</p>
                     <div class="cta">
-                      <a class="gym-button" href="{{ site.gymurl }}{{ site.data.take5.GYM-5042.url }}">Learn More</a> <a class="gym-button" href="{{ site.gymurl }}/collections">View All Collections</a>
+                      <a class="gym-button natural" href="{{ site.gymurl }}{{ site.data.take5.GYM-5042.url }}">Learn More</a>
+                      <a class="gym-button natural" href="{{ site.gymurl }}/collections">View All Collections</a>
                     </div>
                   </article>
                 </div>
